2006-05-04  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 0.99.4.0

	* libpam/pam_strerror.c: Unify error messages.

	* po/zh_TW.po: Adjust for last pam_strerror changes.
	* po/zh_CN.po: Likewise.
	* po/uk.po: Likewise.
	* po/tr.po: Likewise.
	* po/pt.po: Likewise.
	* po/pt_BR.po: Likewise.
	* po/pl.po: Likewise.
	* po/ja.po: Likewise.
	* po/nl.po: Likewise.
	* po/nb.po: Likewise.
	* po/it.po: Likewise.
	* po/hu.po: Likewise.
	* po/fr.po: Likewise.
	* po/fi.po: Likewise.
	* po/es.po: Likewise.
	* po/de.po: Likewise.
	* po/cs.po: Likewise.

	* doc/man/pam.3.xml: New.
	* doc/man/pam.3. New, generated from XML file.

	* doc/man/pam_sm_acct_mgmt.3.xml: New.
	* doc/man/pam_sm_acct_mgmt.3: New, generated from XML file.

	* doc/man/*.xml: Fix encoding and use always UTF-8, regenerate
	all manual pages.

	* doc/pam_modules.sgml (PAM_NEW_AUTHTOKEN_REQD): Fix typo.

2006-05-02  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_unix/pam_unix_acct.c (pam_sm_acct_mgmt): Use
	different strings for plural or not [#1427738]

	* po/*.po: Adjust for pam_unix.so translation fix.

	* modules/pam_tally/pam_tally.c: Always close file handle
	in error case, don't close it depending on *TALLY value [#1478180]

2006-04-21  Thorsten Kukuk  <kukuk@thkukuk.de>

	* po/fr.po: Updated.

2006-04-11  Thorsten Kukuk  <kukuk@thkukuk.de>

	* po/km.po: Updated.

2006-03-27  Thorsten Kukuk  <kukuk@thkukuk.de>

	* po/LINGUAS: Add uk.

	* po/uk.po: New.
	* po/cs.po: Updated.
	* po/po/es.po: Updated.
	* po/fi.po: Updated.
	* po/fr.po: Updated.
	* po/hu.po: Updated.
	* po/it.po: Updated.
	* po/ja.po: Updated.
	* po/nb.po: Updated.
	* po/pl.po: Updated.
	* po/pt.po: Updated.
	* po/pt_BR.po: Updated.
	* po/zh_CN.po: Updated.
	* po/zh_TW.po: Updated.

2006-03-21  Thorsten Kukuk  <kukuk@thkukuk.de>

	* configure.in: Remove ALL_LINGUAS.
	* po/LINGUAS: New.
	* po/tr.po: New (from Ismail Donmez <ismail@pardus.org.tr>).

2006-03-13  Thorsten Kukuk  <kukuk@thkukuk.de>

	* doc/man/pam_error.3.xml: New.