@@ -1,6 +1,8 @@
 Linux-PAM NEWS -- history of user-visible changes.
 
 
+* pam_tally: Fix support for large UIDs
+
 Release 0.99.4.0
 
 * Add test suite
